schema, model, and test controller created

--- a/boss.config
+++ b/boss.config
@@ -17,7 +17,7 @@
 %%   spawn. Defaults to 134217727 (the highest possible value).
 
 [{boss, [
-    {path, "/var/tmp/cb-uuid-system/CB"},
+    {path, "../CB"},
     {applications, [keytest]},
     {assume_locale, "en"},
 %    {vm_cookie, "secret"},
@@ -62,11 +62,11 @@
 %% db_database - The name of the database to connect to (if needed).
 
     {db_host, "localhost"},
-    {db_port, 1978},
-    {db_adapter, mock},
-%    {db_username, "boss"},
-%    {db_password, "boss"},
-%    {db_database, "boss"},
+    {db_port, 5432},
+    {db_adapter, pgsql},
+    {db_username, "keytest_user"},
+    {db_password, "keytest_pass"},
+    {db_database, "keytest_db"},
 
 %%  MongoDB only
 %%
@@ -223,7 +223,7 @@
 %    {ssl_enable, true},
 %    {ssl_options, []},
 
-     {dummy, true} % a final dummy option so we don't have to keep track of commas
+     {dummy, true} % a final dummy option so we don\'t have to keep track of commas
 ]},
 
 %% MESSAGE QUEUE
@@ -243,8 +243,8 @@
     {path, "../keytest"},
     {base_url, "/"},
 %    {domains, all},
-%    {static_prefix, "/static"},
-%    {doc_prefix, "/doc"},
+    {static_prefix, "/static"},
+    {doc_prefix, "/doc"},
 
     {dummy, true}
 ]}
