added cascading tests

--- a/boss.config
+++ b/boss.config
@@ -68,6 +68,10 @@
     {db_password, "keytest_pass"},
     {db_database, "keytest_db"},
 
+  %% {db_host, "localhost"},
+  %% {db_port, 1978},
+  %% {db_adapter, mock}, 
+
 %%  MongoDB only
 %%
 %% Read https://github.com/TonyGen/mongodb-erlang#readme for details
